# InvoMaster

./: .gitignore  PROJECT_RULES.md  README.md  STYLE_GUIDE.md  backend_server.py  build_app.py  build_windows.py  chat.md  industry_pdf.spec  pyproject.toml  pyrightconfig.json  requirements.txt  run_desktop.py  task.md  test_onnx_inference.py
assets/: icon.icns  splash.html
backend/: analysis_results.txt  analysis_results_v2.txt  analysis_results_v3.txt  analysis_results_v4_strategyB.txt  analyze_groups.py  anchor_capture.py  batch_classify.py  build.spec  config.py  database.py  debug_fingerprint.py  debug_output.txt  dump_group3.py  export_model.py  fingerprint.py  group3_dump.txt  inference.py  main.py  migrate_fingerprints.py  ocr_utils.py  positioning.py  pyproject.toml  reproduce_issue.py  reproduce_ocr.py  run_server.py  task_worker.py  test_conf.py  test_fingerprint.py  test_fp.py  utils.py  verify_fix.py
backend/backend/: pyproject.toml
backend/layout_analysis/: structures.py
backend/scripts/: convert_icons.py  download_models.py
docs/: LAYOUT_ANALYSIS_REFACTOR_PLAN.md  dynamic_positioning_explanation.md  implementation_plan.md  layout_analysis_proposal.md  semantic_atomization_design.md  table_extraction_strategies.md  ui_layout_proposals.md  walkthrough.md
electron/: builder-config.json  main.js  package.json  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: cache_all_templates.py  create_pdf.py  debug_inference.py  download_models.py  make_icons.py  optimize_model.py  prepare-release.js  quantize_model.py  verify_layout.py  (+1 more)
(+20 files in other folders)
