[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "ultralytics>=8.3.252",
    "uvicorn>=0.40.0",
]
